dataset1235/2025-2/1955397009/users/4151380891/executions/903431226_2935826613.log
== RUN (2025-08-26 12:43:10)
-- CODE: 
celsius = (float(input()
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    celsius = (float(input()
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 1
    celsius = (float(input()
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 1
    celsius = (float(input()
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 1
    celsius = (float(input()
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 1
    celsius = (float(input()
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 1
    celsius = (float(input()
                    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:43:54)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:43:18)
-- CODE: 
celsius = (float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:42:28)
-- CODE: 
celsius = (float(input))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:43:45)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:43:17)
-- CODE: 
celsius = (float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 1
    celsius = (float(input())
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 12:41:52)
-- CODE: 
celsius = (float())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
32.0
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
32.0
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
32.0
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
32.0
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
32.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:41:59)
-- CODE: 
celsius = (float())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
32.0
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
32.0
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
32.0
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
32.0
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 12:42:22)
-- CODE: 
celsius = (float(input))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = (float(input))
               ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
